# Movemaster_RV-M2

src/movemaster_control/: CMakeLists.txt  package.xml
src/movemaster_control/3D_Models/: Base.stl  CameraSupport.stl  Disco_Garra.skp  Grip1.stl  Grip2.stl  GripCube.stl  GripCube_old.stl  L1.stl  L1_old.stl  L2.stl  L3.stl  L4.stl  L5.stl  realsense.stl  realsense_old.stl  realsense_old2.stl
src/movemaster_control/launch/: angles.launch  camera.launch  display.launch  movemaster.launch  movemaster_simple.launch
src/movemaster_control/rviz/: display.rviz
src/movemaster_control/src/: Arduino_1.py  Arduino_2.py  Arduino_3.py  DEMO.m  Dissertacao_Jonathan_Cerbaro.m  angles.cpp  camera_launcher.cpp  marker_publisherNOVO.cpp  movemaster_urdf.xml  state_publisher.cpp
src/movemaster_control/src/Functions/: FK_Movemaster_SSDQ.m  MovemasterIK_Pos.m  MovemasterIK_PosAndOri.m  statusMovemaster.m
src/movemaster_control/src/Functions/DualQuaternionLib/: ConjDualQuat.m  ConjQuat.m  DH2DQ.m  InvQuat.m  MultDualQuat.m  MultQuat.m  MultQuat2.m  NormaDualQuat.m  NormaQuat.m  RotQuat.m  TransfDualQuat.m  make_g.m  make_h.m
src/movemaster_control/src/Functions/clifford/: Contents.m  Read_me.txt  Release_notes.txt  clifford_basis.m  clifford_csv_export.m  clifford_helpdb.m  clifford_helpup.m  clifford_index.m  clifford_lexical_index_mapping.m  clifford_literal.m  clifford_multiplication_table.m  clifford_parameterless_functions.m  clifford_root.m  clifford_sign.m  clifford_sign_table.m  clifford_signature.m  clifford_tensor.m  copyright.m  descriptor.m  e0.m  e1.m  e12.m  e123.m  (+83 more)
(+331 files in other folders)
